inc/main.css
body {
  font-family: Verdana, Geneva, sans-serif;
  color: #333;
}
h1 {
  font-size: 1.2em;
}
a {
  text-decoration: none;
}
a:hover , a:active {
  text-decoration: underline;
}
ul, li {
  list-style: none;
  padding-left: 1.2em;
}
.toggle {
  display: none;
}
.toggle-label {
  display: block;
  font-size: 18px;
  margin: 3px 0;
  cursor: pointer;
}
.toggle-label:hover,
.toggle:checked ~ .toggle-label {
  color: #e50;
}
.toggle:checked ~ .toggle-label:before {
  margin-right: 6px;
  content: "\2680";
}
.toggle:not(:checked) ~ .toggle-label:before {
  margin-right: 6px;
  content: "\2610";
}
.toggle-label:hover ~ .fold {
  border-left: 1px dotted #999;
}
.fold {
  line-height: 1.8em;
  border-left: 1px dotted #999;
  border-bottom: 1px dotted #999;
  -webkit-transition: all 0.2s linear;
  -moz-transition: all 0.2s linear;
  transition: all 0.2s linear;
}
li.fold{
  font-size: 14px;
}
.toggle:not(:checked) ~ .fold {
  margin-top: -25px;
  -webkit-transform: perspective(0) rotateX(-90deg);
  -moz-transform: perspective(0) rotateX(-90deg);
  transform: perspective(0) rotateX(-90deg);
}
/* ul clear empty DOM space if closed*/
.toggle:not(:checked) ~ ul.fold {
  display: none;
}
.toggle:checked ~ ul.fold {
  display: list-item;
}
ul.fold {
  border-left: 1px dotted #999;
  border-bottom: 0;
  margin-bottom: 1px;
  padding-bottom: 0.5em;
}
/* first ul style */
body > ul.fold {
  border-left: 1px dotted white;
  width: 90%;
  margin: auto;
  -webkit-transition: none;
  -moz-transition: none;
  transition: none;
}
footer{
    margin-top: 5em;
    font-size: 0.8em;
    line-height: 2.2em;
    float: right;
}

